Removing some rules from .gitignore

--- a/git/.gitignore
+++ b/git/.gitignore
@@ -25,7 +25,9 @@
 *.gch
 *.pch
 
-# Libraries
+# ---------------------------------------------------------------------------- #
+# Libraries                                                                    #
+# ---------------------------------------------------------------------------- #
 *.lib
 *.a
 *.la
@@ -96,9 +98,3 @@ dkms.conf
 Network Trash Folder
 Temporary Items
 .apdisk
-
-# ---------------------------------------------------------------------------- #
-# Subdirectories with git                                                      #
-# ---------------------------------------------------------------------------- #
-.git
-.gitignore
