--- a/os/manjaro/.i3/config
+++ b/os/manjaro/.i3/config
@@ -339,11 +339,11 @@ bar {
         separator  #454947
 
 #                      border  backgr. text
-        focused_workspace  #F9FAF9 #16a085 #292F34
-        active_workspace   #595B5B #353836 #FDF6E3
-        inactive_workspace #595B5B #283339 #EEE8D5
-        binding_mode       #16a085 #2C2C2C #F9FAF9
-        urgent_workspace   #16a085 #FDF6E3 #E5201D
+        focused_workspace  c5c8c6 #1d1f21 #c5c8c6
+        active_workspace   c5c8c6 #1d1f21 #c5c8c6
+        inactive_workspace c5c8c6 #1d1f21 #c5c8c6
+        binding_mode       c5c8c6 #1d1f21 #c5c8c6
+        urgent_workspace   c5c8c6 #1d1f21 #c5c8c6
     }
 }
 
@@ -352,13 +352,13 @@ bindsym $mod+m bar mode toggle
 
 # Theme colors
 # class                   border  backgr. text    indic.   child_border
-  client.focused          #556064 #556064 #80FFF9 #FDF6E3
-  client.focused_inactive #2F3D44 #2F3D44 #1ABC9C #454948
-  client.unfocused        #2F3D44 #2F3D44 #1ABC9C #454948
-  client.urgent           #CB4B16 #FDF6E3 #1ABC9C #268BD2
-  client.placeholder      #000000 #0c0c0c #ffffff #000000
+  client.focused           #c5c8c6 #1d1f21 #c5c8c6 #81a2be #81a2be
+  client.focused_inactive  #c5c8c6 #1d1f21 #c5c8c6 #5f819d #5f819d
+  client.unfocused         #c5c8c6 #1d1f21 #c5c8c6 #5f819d #5f819d
+  client.urgent            #c5c8c6 #1d1f21 #c5c8c6 #5f819d #5f819d
+  client.placeholder       #c5c8c6 #1d1f21 #c5c8c6 #5f819d #5f819d
 
-  client.background       #2B2C2B
+  client.background       #1d1f21
 
 #############################
 ### settings for i3-gaps: ###
