Add Credential.helper cache to gitconfig

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -50,3 +50,6 @@
   hist = log --pretty=format:"%h %ad | %s%d [%an]" --graph --date=short
   whois = "!sh -c 'git log -i -1 --pretty=\"format:%an <%ae>\n\" --author=\"$1\"' -"
   whatis = show -s --pretty='tformat:%h (%s, %ad)' --date=short
+
+[credential]
+        helper = cache
